# MY_ENUM

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  Enum.h  EnumFlags.h  EnumFlagsO.h  EnumFwd.h  EnumO.h  README.md
.circleci/: config.yml
.github/workflows/: ci.yml
examples/: CMakeLists.txt  CliExample.cpp
impl/: CompilerAttributes.h  EnumDetails.h  EnumFlagsDetails.h  Logging.h  StringView.h
scripts/: configure_and_build.sh  install_linux_deps.sh  install_osx_deps.sh  run_tests.sh
tests/: CMakeLists.txt  EnumCuda.cu  EnumFlagsOStreamTest.cpp  EnumFlagsTest.cpp  EnumOStreamTest.cpp  EnumTest.cpp
